<?xml version="1.0"?>
<package format="2">
  <name>trajopt_tools</name>
  <version>0.1.0</version>
  <description>This package contains tool useful to trajopt like ConvexDecomposition.</description>
  <maintainer email="Armstrong@todo.todo">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author >Levi Armstrong</author>

  <depend>trajopt_utils</depend>

  <build_depend>cmake_common_scripts</build_depend>
  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <depend>bullet</depend>
  <depend>bullet-extras</depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>vhacd</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
