<?xml version="1.0"?>
<package format="2">
  <name>trajopt_tools</name>
  <version>0.1.0</version>
  <description>This package contains tool useful to trajopt like ConvexDecomposition.</description>
  <maintainer email="Armstrong@todo.todo">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author >Levi Armstrong</author>

  <!-- Following recommendations of REP 136 -->
  <exec_depend>catkin</exec_depend>
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <depend>bullet</depend>
  <depend>bullet-extras</depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>vhacd</depend>
  <depend>trajopt_utils</depend>
  <depend>boost</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
