<?xml version="1.0"?>
<package format="2">
  <name>trajopt_utils</name>
  <version>0.1.0</version>
  <description>The trajopt_utils package</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>BSD</license>

  <build_depend>cmake_common_scripts</build_depend>
  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
