<?xml version="1.0"?>
<package format="2">
  <name>tesseract_collision</name>
  <version>0.1.0</version>
  <description>The tesseract_collision package</description>

  <maintainer email="Levi.Armstrong@swri.org">Levi Armstrong</maintainer>

  <license>Apache 2.0</license>
  <license>BSD</license>
  <author>Levi Armstrong</author>
  <author>John Schulman</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>geometric_shapes</depend>
  <depend>trajopt_ext</depend>
  <depend>eigen_conversions</depend>
  <depend>pluginlib</depend>
  <depend>tesseract_core</depend>

  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <tesseract_collision plugin="${prefix}/tesseract_collision_bullet_plugin_description.xml"/>
  </export>
</package>
