<?xml version="1.0"?>
<package format="2">
  <name>tesseract_core</name>
  <version>0.1.0</version>
  <description>The tesseract_core package contains the core headers for environment</description>

  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>

  <license>Apache 2.0</license>

  <author >Levi Armstrong</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometric_shapes</depend>
  <depend>eigen_stl_containers</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
